Sort out spacing using correct classes

--- a/themes/syndesis/scss/syndesis.scss
+++ b/themes/syndesis/scss/syndesis.scss
@@ -98,12 +98,3 @@ footer.page-footer {
   width: 100%;
   opacity: 0.5;
 }
-
-.full-width-feature {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.row.feature-images [class*="col-"] {
-    margin-bottom: 0.75rem;
-}
